--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,13 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+
+GameExtendBaseSystem/Library/
+
+GameExtendBaseSystem/Logs/
+
+GameExtendBaseSystem/Packages/
+
+GameExtendBaseSystem/Temp/
+
+GameExtendBaseSystem/UserSettings/
